# rune

./: Cargo.toml
client/: Cargo.toml
client/src/: handlers.rs  main.rs  statics.rs  theme.rs  util.rs  widgets.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/cmd/: key.rs  mod.rs  register.rs  send.rs
core/src/crypto/: e2ee.rs  keyring.rs  mod.rs
