[package]
name = "command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
bincode = "1.3.3"
block-modes = "0.8.1"
clap = "3.0"
curve25519-dalek = "4.1.1"
dirs = "5.0.1"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.20"
pbkdf2 = "0.12.2"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
sha2 = "0.10.8"

[dependencies.rune-proto]
name = "rune-proto"
path = "../proto"
